# Circall

./: .gitingore  Circall.sh  Dockerfile  README.md  build_docker.sh  config.sh  environment.yml
Circall_v0.1.0/: config.sh
Circall_v0.1.0/R/: doSingleEndFiltering.R
Circall_v0.1.0/src/: CMakeLists.txt
Circall_v0.2.0/R/: Circall_functions.R  buildBSJdb.R
Circall_v0.2.0/include/: ExportFeq.hpp  ReadExperiment.hpp
Circall_v0.2.0/linux/lib/: libgcc_s.so.1  libtbbmalloc_proxy.so.2
Circall_v0.2.0/src/: ExportFeq.cpp
Circall_v1.0.0/: Circall_source.sh  install.sh
Circall_v1.0.0/R/: createSqlite.R  export.R  getPseudoCircRNAsequence.R  load_packages.R
Circall_v1.0.0/linux/lib/: libm.so.6  libtbb.so.2  libtbbmalloc.so.2
Circall_v1.0.0/src/: Circall_pseudo.cpp  EmpiricalDistribution.cpp
Circall_v1.0.1/: config.sh
Circall_v1.0.1/R/: Circall_functions.R
Data/: Circall_depdata_human.RData
R/: Circall_functions.R  Circall_simulator.R  buildBSJdb.R  createSqlite.R  doPairEndFiltering.R  export.R  getFdr.R  getPseudoCircRNAsequence.R  load_packages.R
include/: EmpiricalDistribution.hpp  EquivalenceClassBuilder.hpp  SACollectorCircall.hpp
src/: Circall_bsj.cpp  Circall_wt.cpp  TxIndexer.cpp
